@@ -1,4 +1,5 @@
 - drakboot:
+  o enable to (un)install os-prober (mga#16010, mga#18538)
   o fix reading back last grub2 entry
   o only overwrite GRUB_CMDLINE_LINUX_DEFAULT on first install (mga#18112)
   o set GRUB_DEFAULT + GRUB_SAVEDEFAULT (mga#9627, mga#16059)
